# geo-resilience

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: README.md
notebooks/: 01_data_preparation.ipynb  02_analysis.ipynb  03_visualization.ipynb
notebooks/archive/: nepal_south_asia_timeseries_V7.ipynb
scripts/: generate_figures.py  preprocess.py  reproduce_results.py  run_pipeline.py
src/: __init__.py  analysis.py  config.py  plotting.py  preprocessing.py  statistics.py  utils.py  visualization.py
tests/: test_basic.py
